--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:eI5SB9yy5Q+GDquY6fNpJBx/Cu2uftiahT4TvPJOyEw=
+APP_KEY=base64:YUj7RKlqPX/cvkmSAEZKoMHT3EBPfXQomehsc1iy/C4=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=instagram
+DB_DATABASE=ecommerce
 DB_USERNAME=root
 DB_PASSWORD=root
 
