--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
             - app-network
 
     mysql:
+        platform: linux/x86_64
         image: mysql:5.7
         container_name: mysql
         restart: unless-stopped
